# swe-term

./: .gitignore  AGENTS.md  go.mod  main.go  main.py  pyproject.toml
.agents/commands/: ruthless-code-reviewer.md
.github/: agents  skills
docs/: AST_SERVICE_ARCHITECTURE.md  CLAUDE_DEEP_DIVE.md  CLI_TOOLS.md  CODEX_DEEP_DIVE.md  DEEPAGENTS_CRITIQUE.md  DEEPAGENTS_DEEP_DIVE.md  FLUE_CRITIQUE.md  GOLANG_TUI_PLAN.md  INTEGRATION.md  PI_MONO_CRITIQUE.md  PI_MONO_DEEP_DIVE.md  PLAN.md  README.md  RUST_TUI_PLAN.md  TODO.md
docs/core/: ARCHITECTURE.md  BACKLOG.md  FRAMEWORKS.md  GOLANG_TUI_PLAN.md  PLAN.md  README.md
docs/plans/: 2026-05-03-books-fuzzy-search-design.md
docs/research/: README.md  (+5 more)
extensions/swe_distiller/: ARCHITECTURE.md  Cargo.toml  README.md  TODO.md
extensions/swe_distiller/src/: constants.rs  dom.rs  fetch.rs  find_content.rs  lib.rs  main.rs  markdown.rs  markdown_ast.rs  metadata.rs  observability.rs  sanitize.rs  scoring.rs  types.rs
extensions/swe_distiller/src/extraction/: checks.rs  llm.rs  mod.rs
extensions/swe_distiller/src/extractors/: chat_llm.rs  github.rs  hackernews.rs  mod.rs  reddit.rs  registry.rs  substack.rs  x_twitter.rs  youtube.rs
extensions/swe_distiller/src/removal/: content_patterns.rs  hidden.rs  metadata_block.rs  mod.rs  scoring.rs  selectors.rs  small_images.rs
extensions/swe_distiller/src/standardize/: callouts.rs  content.rs  footnotes.rs  mod.rs
extensions/swe_distiller/tests/: integration.rs
extensions/swe_distiller/tests/fixtures/: general--cp4space-jordan-algebra.html
src/: prompts.py  prompts.yaml
(+3 files in other folders)
