[package]
name = "swe_distiller"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust CLI to extract readable markdown from webpages"

[features]
default = []
browser = ["dep:chromiumoxide", "dep:futures-util"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chromiumoxide = { version = "0.9.1", optional = true }
encoding_rs = "0.8"
ego-tree = "0.10"
futures-util = { version = "0.3", optional = true }
once_cell = "1"
regex = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "gzip", "brotli", "deflate", "json"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"
quick-xml = "0.38"

[dev-dependencies]
pretty_assertions = "1"
